--- a/dev/scss/modules/_content.scss
+++ b/dev/scss/modules/_content.scss
@@ -3,18 +3,21 @@
 }
 .Content-Style{
 	h2{
-	color:#8cc63f;
+		color:#8cc63f;
 	}
+
 	h5{
-	color:#c3c5f5;
-	margin: 5% 0 1% 0;
+		color:#c3c5f5;
+		margin: 5% 0 1% 0;
 	}
 	color: #000;
-  background-color: #fff;
-  border-bottom: 2px solid #8cc63f;
-  border-right: 2px solid #8cc63f;
-  border-left: 2px solid #8cc63f;
-  padding: 0 25px;
+	background-color: #fff;
+	border-bottom: 2px solid #8cc63f;
+	border-right: 2px solid #8cc63f;
+	border-left: 2px solid #8cc63f;
+	padding: 0 25px;
+	border-top: 2px solid #8cc63f;
+	margin-top: -2px;
 }
 
 //---- IMG VAST -----//
