--- a/dev/scss/core/_settings.scss
+++ b/dev/scss/core/_settings.scss
@@ -11,6 +11,7 @@
 
 // Open Sans (normal, italic, bold, bold/italic)
 @include web-fonts(("Open Sans": ("400", "400 italic", "800", "800 italic")));
+@import url(http://fonts.googleapis.com/css?family=Quicksand);
 
 // -------------------------------------
 // Variables
