--- a/dev/scss/global.scss
+++ b/dev/scss/global.scss
@@ -74,3 +74,11 @@
 	width: 100%;
 	height: 250px;
 }
+.wrapperAll{
+box-shadow: 0px 0 33px 3px #aaaaaa;
+background:#fff;; 
+}
+.No-Padding{
+	padding-left:0;
+	padding-right:0;
+}
