--- a/dev/scss/modules/_footer.scss
+++ b/dev/scss/modules/_footer.scss
@@ -19,8 +19,22 @@
 }
 
 .Socket{
+	.Socket-Pwrapper{
+		background-color: #414181;	
+		text-align: center;
+		margin: -2px 0 0 0;
+		border-top:#414181 solid 1px;
+		height: 50px;
+	}
 	p{
-		text-align: center;		
+		margin: -2px auto 0 auto;
+		border-top: #fff solid 1px;
+		border-bottom: #414181 solid 1px;
+		border-left: #414181 solid 1px;
+		border-right: #414181 solid 1px;
+		max-width: 19%;
+		color: #fff;
+		padding: 1%;
 	}	
 }
 
