--- a/dev/scss/modules/_navigation.scss
+++ b/dev/scss/modules/_navigation.scss
@@ -6,8 +6,11 @@
 // *************************************
 
 .Navigation {
+  @include clearfix;
   text-align: left;
   position: relative;
+  box-shadow: 0px 10px 15px -7px rgba(0, 0, 0, 0.5);
+  border-top:2px solid #414181;
 }
 
 .Nav-top {
@@ -42,12 +45,12 @@
 // -------------------------------------
 
 .Navigation-link.is-active {
-  color: #000;
-  background-color: #fff;
-  border-top: 2px solid #8cc63f;
-  border-right: 2px solid #8cc63f;
-  border-left: 2px solid #8cc63f;
-  border-bottom: none;
+  color: #fff;
+  background-color: #414181;
+  //border-top: 1px solid #414181;
+  //border-right: 1px solid #414181;
+  //border-left: 1px solid #414181;
+  //border-bottom: none;
 }
 
 // -------------------------------------
@@ -72,23 +75,24 @@
     margin-right: 0;
   }
 }
-.Navigation .Navigation-listItem:nth-of-type(1){
+.Navigation > ul > .Navigation-listItem:nth-of-type(1){
   background-color: #c3c5f5;
-}
-.Navigation .Navigation-listItem:nth-of-type(2){
+  }
+.Navigation  > ul >.Navigation-listItem:nth-of-type(2){
   background-color: #c8caf7;
 }
-.Navigation .Navigation-listItem:nth-of-type(3){
+.Navigation  > ul >.Navigation-listItem:nth-of-type(3){
   background-color: #d2d3f8;
 }
-.Navigation .Navigation-listItem:nth-of-type(4){
+.Navigation > ul > .Navigation-listItem:nth-of-type(4){
   background-color: #D7D7EB;
 }
-.Navigation .Navigation-listItem:nth-of-type(5){
+
+.Navigation  > ul >.Navigation-listItem:nth-of-type(5){
   background-color: #e7e7fc;
 }
-.Navigation .Navigation-listItem:nth-of-type(6){
-  background-color: #f4f4fe;
+.Navigation  > ul >.Navigation-listItem:nth-of-type(6){
+  background-color: #e7e7fc;
 }
 
 // ----- Navigation link ----- //
@@ -98,8 +102,8 @@
   line-height: 30px;
   font-size: 17px;
   font-weight: 200;
-  border-bottom: 2px solid #8cc63f;
-  padding: 12px 15px;
+  //border-bottom: 1px solid #414181;
+  padding: 5px 41.8px;
 
   display: block;
 
@@ -140,16 +144,18 @@
 ul.Navigation-list--dropdown {
   display: block;
   height: auto;
-    position: absolute;
-  border: 1px solid white;
-  border-top: 0px solid white;
-  border-bottom: 0px solid white;
+  position: absolute;
+  //border: 1px solid white;
+  //border-top: 0px solid white;
+  //border-bottom: 0px solid white;
   width: auto;
-    line-height: 40px;
-    top: 45px;
-    left: -5px;
-    z-index: 110;
-    box-shadow: 0px 10px 15px -7px rgba(0, 0, 0, 0.5);
+  line-height: 40px;
+  top: 45px;
+  left: -5px;
+  z-index: 110;
+  box-shadow: 0px 10px 15px -7px rgba(0, 0, 0, 0.5);
+  background-color:rgba(255, 255, 255, 0.92);
+  font-size: 10px;
 
   @media screen and (-webkit-min-device-pixel-ratio:0) {
     top: 43px;
@@ -162,12 +168,14 @@ ul.Navigation-list--dropdown {
   li.Navigation-listItem {
     display: block;
     padding: 0 2px;
-    width: 215px;
-    text-align: center; 
+    text-align: left; 
     a {
       background-color: transparent;
       border: 0px solid;
     }
+  }
+  li.Navigation-listItem:hover {
+      background-color: #f4f4fe;
   }
 }
 //---------------------------------------
@@ -279,7 +287,7 @@ ul.Navigation-list--dropdown {
           border: 0px solid;
           font-weight: 400;
           letter-spacing: 1.7px;
-          border-bottom: 1px solid #1e719a;
+          //border-bottom: 1px solid #414181;
           &:hover {
             background-color: #1e719a;
             color: white;
@@ -312,4 +320,9 @@ ul.Navigation-list--dropdown {
     margin-top: 20px;
     width: 170px;
   }
+}
+.Navigation-link:hover{
+  background-color:white;
+  color: black;
+
 }
