--- a/dev/scss/core/_settings.scss
+++ b/dev/scss/core/_settings.scss
@@ -24,6 +24,8 @@ $c-black : #1B1C17;
 $c-blue  : #0070AF;
 $c-white : #EFEFEF;
 
+$c-purple: #414181;
+
 // ----- Layout ----- //
 $l-whiteSpace: 0.5rem;
 $l-insideGutter: 1rem;
