--- a/dev/scss/modules/_navigation.scss
+++ b/dev/scss/modules/_navigation.scss
@@ -46,11 +46,15 @@
 
 .Navigation-link.is-active {
   color: #fff;
-  background-color: #414181;
+  background-color: $c-purple;
   //border-top: 1px solid #414181;
   //border-right: 1px solid #414181;
   //border-left: 1px solid #414181;
   //border-bottom: none;
+}
+
+.Navigation-list--dropdown .Navigation-link.is-active {
+  color: $c-purple;
 }
 
 // -------------------------------------
@@ -103,7 +107,7 @@
   font-size: 17px;
   font-weight: 200;
   //border-bottom: 1px solid #414181;
-  padding: 5px 41.8px;
+  padding: 5px 32px;
 
   display: block;
 
@@ -148,7 +152,7 @@ ul.Navigation-list--dropdown {
   //border: 1px solid white;
   //border-top: 0px solid white;
   //border-bottom: 0px solid white;
-  width: auto;
+  width: 100%;
   line-height: 40px;
   top: 45px;
   left: -5px;
@@ -158,7 +162,7 @@ ul.Navigation-list--dropdown {
   font-size: 10px;
 
   @media screen and (-webkit-min-device-pixel-ratio:0) {
-    top: 43px;
+    top: 69px;
 
     a {
       font-weight: 100 !important;
@@ -225,8 +229,8 @@ ul.Navigation-list--dropdown {
 //          @media queries - Responsiveness
 //======================================================
 
-@media all and (max-width: 770px) {
-  .Nav-tel {
+/* @media all and (max-width: 770px) {
+ .Nav-tel {
     display: none;
   }
 
@@ -326,3 +330,4 @@ ul.Navigation-list--dropdown {
   color: black;
 
 }
+*/
