--- a/dev/scss/modules/_responsive-nav.scss
+++ b/dev/scss/modules/_responsive-nav.scss
@@ -1,3 +1,37 @@
+// Responsive nav menu. Everything related to the navigation in TABLET/MOBILE mode should go here
+.Navigation{
+	background-color:#e7e7fc;
+}
+.Navigation-menuToggle {
+  display: none;
+}
+.Navigation-menuToggle {
+//background-color: white;
+  width: 36px;
+  height: 36px;
+  border-radius: 7px;
+  margin-top: 7px;	
+  background-color: transparent;
+  border: 3px solid white;
+  cursor: pointer;
+ // float: right;    
+	&:hover {
+		//	background-color: #fafafa;
+	} 
+}
+
+.Nav-toggle {
+  .Icon.Icon--inline {
+    fill: white;
+    display: block;
+    margin: auto;
+    margin-top: 4px;
+    height: 25px;
+    width: 25px;
+
+  } 
+}
+
 // *************************************
 //
 // responsive-nav
@@ -10,108 +44,187 @@
 }
 
 
-
-/*   This is how the navigation should be orderd if using the responsive navigation below.
-
-
-.Navigation {
-	ul.Navigation-list {
-		margin: 0;
-		
-		li.Navigation-listItem {
-			margin: 0 -5px 0 0;
-			line-height: 49px;
-			padding: 15px 0;
-			border-left: 2px solid white;
-			
-			&:first-of-type {
-				border-left: 0px solid white;
-			}
-			
-			&:hover {
-				background-color: $c-grey;
-
-				-webkit-transition:all 0.2s ease;
-				-moz-transition:all 0.2s ease;
-				-o-transition:all 0.2s ease;
-				a.Navigation-link {
-					color: $c-red;
-					text-decoration: none;
-
-				}
-			}
-			
-			a.Navigation-link {
-				color: white;
-				font-size: 14px;
-				padding: 13px;
-				margin: 0;
-				font-weight: 600;
-				letter-spacing: 1.5px;
-			
-			}
-		}
-	}
-}
-*/
-
-
 //======================================================
 //          @media queries - Responsiveness
 //======================================================
+@media all and (min-width: 1040px) {
+
+} 
+@media all and (max-width: 1024px) {
+	.Navigation-link{
+		padding: 5px 26px
+	}
+	.Content-Style h2{
+		font-size: 30px;
+	}
+	
+}
+@media screen and (max-width: 993px) {
+  .Navigation-link{
+    padding: 5px 24px;
+  }
+}
+@media all and (max-width: 767px) {
+	.Navigation-link {
+		padding: 5px 16px;
+		font-size: 14px;
+	}
+	.Content-Style h2 {
+		font-size: 23px;
+	}
+}
+
+//---------------------------------------------------------------------
 
 
-@media all and (max-width: 1040px) {
+@media all and (max-width: 1040px) {  
+  #js-navCollapse {
+    display: none;
+  }
+  .Navigation-link{
+		padding:5px 24px; 
+	}
+}
+@media all and (max-width: 957px) { 
+	.Navigation-link{
+		padding:5px 18px; 
+	}
+}
+@media all and (max-width: 900px) { 
+	.Navigation-link{
+		padding:5px 15px; 
+	}
+}
+@media all and (max-width: 870px) { 
+	.Navigation-link{
+		padding:5px 15px;
+		font-size: 16px; 
+	}
+}
+@media all and (max-width: 830px) { 
+	.Navigation-link{
+		padding:5px 15px;
+		font-size: 14px; 
+	}
+}
+@media all and (max-width: 768px) {  
+	.Navigation-link {
+	padding: 5px 8px;
+	font-size: 14px;
+	}
+}
+@media all and (max-width: 675px) {
+	.bx-wrapper{
+		border-bottom:2px solid #414181;
+	}
+	.Nav-tel {
+		display: none;
+	 }
+	 #js-navCollapseTarget {
+	 	fill: white;
+		display: none;
+        position: static;
+        //top: 65px;
+        left: 0;
+        margin: 0;
+        width: 100%;
+        box-shadow: 0px 30px 20px -20px rgba(0, 0, 0, 0.3) inset;
 
-//  This is the wrapper for the navigation
+	 }
+
+	 .Bot-Nav {
+		height: auto;
+		min-height: 58px;
+	 }
+	 #js-navCollapse {
+		display: block;
+	 }
+
+	//  This is the wrapper for the navigation
 	.Nav-wrap {
 		height: auto;
 		min-height: 60px; // <-- adjust to height of div
 	}
 
-//  Adjust the sizes and colors for erverything to your choice
+	.Navigation-menuToggle  {
+	    display: block;
+	    fill: white;
+	    margin-top: -37px;
+	    padding:0.6% 0 0 0;
+	    .Icon {
+        	width: 1.2em;
+        	height: 1.2em;
+        	margin-left: 6px;
+        }
+	}
+	//  Adjust the sizes and colors for erverything to your choice
 	.Navigation {	
 		position: relative;
-		ul.Navigation-list {
-			margin-top: 60px;
-			position: absolute;
-			li.Navigation-listItem {
-				display: block;
-				line-height: 30px;
-				border-left: 0 solid;
-
-				&:last-of-type {
-					margin-bottom: 15px;
-				}
-
-				&:hover {
-					background-color: $c-blue;
-
-					-webkit-transition:all 0.2s ease;
-					-moz-transition:all 0.2s ease;
-					-o-transition:all 0.2s ease;
-					a.Navigation-link {
-						color: $c-blue;
-						text-decoration: none;
-
-					}
-				}
-
-				a.Navigation-link {
-					color: white;
-					display: block;
-					font-size: 14px;
-					padding: 5px;
-					margin: 0;
-					font-weight: 600;
-					letter-spacing: 1.5px;
-
-				}
-			}
-		}
 	}
 
-//	This is for those 3 contact icons on the left of the navbar
+	.Navigation-list {
+		position: static;
+        background-color: #0AC74B;
+        border: 0px solid;
+        box-shadow: 0 0 0 #fff;
+
+
+	}
+
+
+	.Navigation-listItem {
+		display: block;
+		float: none;
+		line-height: 30px;
+		border-left: 0 solid;
+		width: 100%;
+
+		&:last-of-type {
+			margin-bottom: 15px;
+		}
+
+		&:hover {
+			//background-color: $c-blue;
+
+			-webkit-transition:all 0.2s ease;
+			-moz-transition:all 0.2s ease;
+			-o-transition:all 0.2s ease;
+			a.Navigation-link {
+			//	color: $c-blue;
+				text-decoration: none;
+
+			}
+		}
+
+        &:first-of-type a {       
+          box-shadow: 0px 30px 20px -20px rgba(0, 0, 0, 0.1) inset;
+          padding-top: 10px;  
+        }
+
+        &:last-of-type a {              
+          box-shadow: 0px 15px 20px -18px rgba(0, 0, 0, 0.6);
+          border-bottom: 0px solid;
+        }
+
+	}
+
+	.Navigation-link {
+        line-height: 58px;
+		color: #000;
+		display: block;
+        font-size: 20px;
+		padding: 5px;
+		margin: 0;
+		font-weight: 400;
+		letter-spacing: 1.7px;
+	    &:hover {
+            background-color: #1e719a;
+            color: white;
+        }
+
+
+	}
+	//	This is for those 3 contact icons on the left of the navbar
 	.Mob-contact-ico {
 		display: block;
 		z-index: 5000;
@@ -141,6 +254,7 @@
 			left: 10px;				
 			.Icon--inline {
 				margin: -4px;
+				margin-top: 5px;
 			}
 		}
 
@@ -148,14 +262,57 @@
 			left: 55px;				
 			.Icon--inline {
 				margin: -5px;
+				margin-top: 5px;
 			}
 		}
 
 		.mailsvg {
 			left: 100px;				
 			.Icon--inline {
-				margin: -6px;
+				margin: -4px;
+				margin-top: 5px;
 			}
 		}
 	}
+}
+@media all and (max-width: 500px) { 
+  .logo-top {
+    width: 220px;
+    margin-top: 38px;
+  }
+  
+  .logo-bot {
+    margin-top: 16px;
+    width: 210px;
+  }
+  #js-navCollapse{
+  	display: block;
+  }
+}
+@media all and (max-width: 480px) { 
+  .Bot-Nav{
+    min-height: 0 ;
+  }
+ }
+@media all and (max-width: 390px) { 
+  .logo-top {
+    width: 180px;
+    margin-top: 48px;
+  }
+  
+  .logo-bot {
+    margin-top: 20px;
+    width: 170px;
+  }
+}
+@media all and (max-width: 384px) {
+
+}
+@media all and (max-width: 320px) {
+.Navigation-menuToggle{
+  margin-top: -46px !important;
+}
+.content-bottom-wrapper-text1, .content-bottom-wrapper-text2{
+	width: 51%;
+}
 }
